test/e2e/testdata/btp-tracing.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: tracing-otel
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: tracing-otel
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: EnvoyProxy
metadata:
  name: tracing-otel
  namespace: gateway-conformance-infra
spec:
  ipFamily: IPv4
  telemetry:
    tracing:
      provider:
        backendRefs:
          - name: otel-collector
            namespace: monitoring
            port: 4317
      # will be overridden by tags
      customTags:
        "provider":
          type: Literal
          literal:
            value: "value-will-be-overrite"
      tags:
        "provider": "otel"
        "k8s.cluster.name": "envoy-gateway"
        "k8s.pod.name": "%ENVIRONMENT(ENVOY_POD_NAME)%"
        "k8s.namespace.name": "%ENVIRONMENT(ENVOY_POD_NAMESPACE)%"
  shutdown:
    drainTimeout: 5s
    minDrainDuration: 1s
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: override
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: tracing-otel
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /otel-override
      backendRefs:
        - name: infra-backend-v1
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: no-override
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: tracing-otel
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /otel
      backendRefs:
        - name: infra-backend-v1
          port: 8080
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: btp-tracing
  namespace: gateway-conformance-infra
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: override
  telemetry:
    tracing:
      samplingFraction:
        numerator: 100
      tags:
        "provider": "otel-override"
        "k8s.cluster.name": "envoy-gateway"
        "k8s.pod.name": "%ENVIRONMENT(ENVOY_POD_NAME)%"
        "k8s.namespace.name": "%ENVIRONMENT(ENVOY_POD_NAMESPACE)%"
